# rag-processor

./: .codecov.yml  .coderabbit.yaml  .cruft.json  .dockerignore  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .infisical.json  .markdownlint.json  .markdownlintignore  .mutmut_config  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG_TEMPLATES_SUMMARY.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  REUSE.toml  SECURITY-FINDINGS.md  SECURITY.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  noxfile.py  osv-scanner.toml  pyproject.toml  renovate.json  sonar-project.properties
.claude/: README.md  settings.json  settings.local.json.example
.claude/agents/: code-reviewer.md  merge-standards.md  security-auditor.md  test-engineer.md
.claude/commands/: plan.md  pr.md  quality.md  security.md  testing.md
.claude/skills/commit-prepare/: SKILL.md
.claude/skills/project-planning/: SKILL.md
.claude/skills/project-planning/reference/: document-guide.md  prompting-patterns.md
.claude/skills/project-planning/scripts/: validate-planning-docs.py
.claude/skills/project-planning/templates/: roadmap-template.md  tech-spec-template.md
.claude/skills/testing/: SKILL.md
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: README.md  ci.yml  cifuzzy.yml  codecov.yml  codeql.yml  container-security.yml  coverage.yml  dependency-review.yml  docs.yml  fips-compatibility.yml  mutation-testing.yml  performance-regression.yml  postman-api-tests.yml  pr-title.yml  pr-validation.yml  publish-pypi.yml  python-compatibility.yml  qlty.yml  release-sign.yml  release.yml  repo-health.yml  reuse.yml  sbom.yml  scorecard.yml  security-analysis.yml  slsa-provenance.yml  sonarcloud.yml  validate-cruft.yml
.qlty/: logs  out  plugin_cachedir  qlty.toml  results
.standards/: CLAUDE.baseline.md  README.baseline.md  README.md  REUSE.baseline.toml  env.example.baseline  mkdocs.yml.baseline  pyproject.toml.baseline  template_feedback.baseline.md
LICENSES/: MIT.txt  ODbL-1.0.txt
config/: pipelines.yaml
docs/: LARGE_FILE_HANDLING.md  OPENSSF_COMPLIANCE.md  PROJECT_A_INTEGRATION_GUIDE.md  PROJECT_SETUP.md  PYTHON_COMPATIBILITY.md  api-reference.md  ci-workflow-issues-handoff.md  index.md  known-vulnerabilities.md  reusable-workflow-issues-handoff.md  reusable-workflow-jobs.yaml  template_feedback.md  webui_spec.md
docs/ADRs/: README.md  adr-template.md
docs/_data/: tags.yml
docs/api/: openapi.json  postman-collection.json
docs/architecture/: README.md  overview.md
docs/development/: architecture.md  code-quality.md  contributing.md  testing.md
docs/guides/: configuration.md  overview.md  usage.md
docs/planning/: HANDOFF_UNIFY_DOCUMENT_CONTEXT_PRESERVATION.md  PROJECT-PLAN.md  README.md  api-contracts.md  paperless-integration-analysis.md  phase-0-completion-handoff.md  phase-0-foundation.md  phase-1-completion-handoff.md  phase-1-mvp-core.md  phase-2-enhancement.md  phase-3-polish.md  project-plan-template.md  project-vision.md  roadmap.md  sprint-1-implementation-plan.md  tech-spec.md
docs/planning/adr/: README.md  adr-001-initial-architecture.md  adr-001-react-fastapi-architecture.md  adr-002-paperless-ngx-integration.md  adr-002-redis-job-queue.md  adr-002-workflow-orchestration-comparison.md  adr-003-cloudflare-auth.md
docs/project/: changelog.md  license.md  roadmap.md
docs/superpowers/plans/: 2026-05-23-phase-1-completion.md
frontend/: Dockerfile  README.md  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: FileUpload.css  FileUpload.tsx  Header.css  Header.tsx  UploadButton.css  UploadButton.tsx
frontend/src/hooks/: useAuth.ts  useUpload.ts  useWebSocket.ts
frontend/src/store/: authStore.ts  uploadStore.ts
frontend/src/test/: App.test.tsx  FileUpload.test.tsx  Header.test.tsx
frontend/src/types/: auth.ts  upload.ts  websocket.ts
fuzz/: README.md  __init__.py  fuzz_file_classifier.py  fuzz_file_detector.py  fuzz_input_validation.py  fuzz_jwt_validation.py
scripts/: README.md  benchmark.py  check_fips_compatibility.py  check_quality_gate.py  check_type_hints.py  export_openapi.py  generate-client.sh  setup-supply-chain.sh  setup_github_protection.py  validate_assuredoss.py
src/rag_processor/: __init__.py  main.py
src/rag_processor/api/: __init__.py  batch.py  dependencies.py  health.py  ingest.py  user.py
src/rag_processor/auth/: __init__.py  cloudflare.py  dependencies.py  models.py
src/rag_processor/core/: __init__.py  cache.py  config.py  exceptions.py  pipeline_config.py  redis.py  sentry.py
src/rag_processor/middleware/: __init__.py  correlation.py  security.py
src/rag_processor/models/: __init__.py  batch.py  job.py
src/rag_processor/queue/: __init__.py  client.py  jobs.py  redis_store.py
src/rag_processor/routing/: __init__.py  classifier.py  detector.py  router.py
src/rag_processor/utils/: __init__.py  logging.py  time_utils.py
src/rag_processor/websocket/: __init__.py  bridge.py  connection_manager.py  events.py  router.py
tests/: conftest.py  test_example.py
tests/integration/: __init__.py  test_app_lifespan.py  test_e2e_flow.py  test_gateway.py  test_pipeline_flow.py
tests/unit/: __init__.py  test_app_factory.py  test_auth_cloudflare.py  test_auth_middleware.py  test_batch_authz.py  test_cache.py  test_core_redis.py  test_correlation.py  test_event_bridge.py  test_exception_handler.py  test_exceptions.py  test_health_readiness.py  test_ingest.py  test_jobs_async.py  test_middleware_security.py  test_models.py  test_pipeline_config.py  test_queue.py  test_redis.py  test_routing.py  test_routing_config.py  test_time_utils.py  test_websocket.py  test_websocket_router.py
(+1 files in other folders)
